[gd_scene load_steps=10 format=3 uid="uid://dv1l6sv1h14vi"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_vc3q1"]
[ext_resource type="Script" uid="uid://bil14vtn8w5e4" path="res://addons/CustomControls/Dialogs/show_select_image_rect_dialog.gd" id="2_ip5kc"]
[ext_resource type="Texture2D" uid="uid://btjtps7r83y2t" path="res://addons/CustomControls/Images/buttons.png" id="3_u4ytn"]
[ext_resource type="PackedScene" uid="uid://bj48rsidmna6s" path="res://addons/CustomControls/custom_spin_box.tscn" id="3_yd2ls"]
[ext_resource type="PackedScene" uid="uid://bealtmarqhbfs" path="res://addons/CustomControls/custom_option_button.tscn" id="3_yljco"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="4_3llfg"]

[sub_resource type="Gradient" id="Gradient_7ascj"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qk4x1"]
gradient = SubResource("Gradient_7ascj")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1otu"]
atlas = ExtResource("3_u4ytn")
region = Rect2(0, 0, 240, 240)

[node name="ShowSelectImageRectDialog" type="Window"]
title = "Select Rect"
position = Vector2i(0, 36)
size = Vector2i(800, 600)
transient = true
exclusive = true
theme = ExtResource("1_vc3q1")
script = ExtResource("2_ip5kc")
texture = ExtResource("3_u4ytn")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_qk4x1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TopContainer"]
layout_mode = 2
text = "Step"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/TopContainer"]
layout_mode = 2
text = " X:"

[node name="StepX" parent="MarginContainer/VBoxContainer/TopContainer" instance=ExtResource("3_yd2ls")]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
value = 16.0
allow_greater = true

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/TopContainer"]
layout_mode = 2
text = " Y:"

[node name="StepY" parent="MarginContainer/VBoxContainer/TopContainer" instance=ExtResource("3_yd2ls")]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
value = 16.0
allow_greater = true

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/TopContainer"]
layout_mode = 2
text = " setting mode:"

[node name="CustomOptionButton" parent="MarginContainer/VBoxContainer/TopContainer" instance=ExtResource("3_yljco")]
layout_mode = 2
selected = 1
item_count = 2
popup/item_0/text = "None"
popup/item_1/text = "Grid adjustment"
popup/item_1/id = 1

[node name="CanvasContainer" type="Control" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="CanvasGrid" type="Control" parent="MarginContainer/VBoxContainer/CanvasContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasRect" type="Control" parent="MarginContainer/VBoxContainer/CanvasContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_3llfg")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_3llfg")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
text = "CANCEL"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("AtlasTexture_s1otu")

[connection signal="value_changed" from="MarginContainer/VBoxContainer/TopContainer/StepX" to="." method="_on_step_x_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TopContainer/StepY" to="." method="_on_step_y_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
